tests/baselines/reference/switchCases.errors.txt
switchCases.ts(2,7): error TS2678: Type '1' is not comparable to type '0'.


==== switchCases.ts (1 errors) ====
    switch(0) {
     case 1:
          ~
!!! error TS2678: Type '1' is not comparable to type '0'.
     break;
    }
    